# agent_flow

./: .env  .gitignore  README.md  docker-compose.yml  generate_script.py
agent_server/: Dockerfile  main.py  project.md  requirements.txt
agent_server/app/agent/: agent.py  deps.py  tools.py
agent_server/app/auth/: dependencies.py  jwt_verift.py  jwt_verify.py  schema.py
agent_server/app/common/: config.py  jwt.py  redis.py
agent_server/app/graph_agent/: agents.py  graph.py  nodes.py  schemas.py  state.py
agent_server/app/mcp_servers/openstack/: mock.py
agent_server/app/mcp_servers/openstack-mcp-server/: .env  get_server_info.py  image_info.txt  main.py  pyproject.toml  server_info.txt
agent_server/app/mcp_servers/openstack-mcp-server/handlers/: __init__.py  compute.py  recovery.py
agent_server/app/mcp_servers/openstack-mcp-server/tools/: __init__.py  compute.py  recovery.py
agent_server/app/mcp_servers/test_mock_server/: main.py
agent_server/app/mcp_servers/test_mock_server/handlers/: __init__.py  mock.py
agent_server/app/mcp_servers/test_mock_server/tools/: __init__.py  mock.py
agent_server/app/ws/: chat.py
agent_server/static/: test.html
docs/: ADR.md  ARCHITECTURE.md  PRD.md  RAG.md  REQUIREMENTS.md  STATUS.md  UI_GUIDE.md  USECASES.md
given_docs/: audit_log.md  jwt_schema.md  redis_schema.md  role.md  subject.md
secrets/: private_key.pem  public_key.pem
